- Fixed: Scenes table now includes pagination at the bottom
- Implemented: Raspberry Pi camera
- Implemented: JSon, updating device based on idx (json.htm?type=command&param=udevice&idx=123&nvalue=1&svalue=2)
- Fixed: WU rain sensor (will have a new sensor type, old one needs to be removed)
- Implemented: device name in scripts calls (6th parameter)
- Implemented: Security Panel (first version)

Version 1.0.762 (July 1th 2013)
- Changed: Motion Sensors, Off delay now sends 'Off' to Lighting 1/6 devices, and 'No Motion' to X10 motion sensors
- Implemented: On/Off switches, Off Delay option
- Implemented: BMP085 I2C sensor (Rasberry Pi/arm only)
- Fixed: Sharing of Voltcraft,Razberry,BMP085
- Implemented: BMP085 altitude display
- Implemented: BMP085 Possible forecast, still need exact method
- Implemented: Blinds Stop button
- Fixed: Setup dropdown, users/notifications selection highlight
- Implemented: Global hardware sharing system (application settings, user manager)
- Implemented: Shared clients can now control switches
- Fixed: Some RFXCOM protocols could not be set in the hardware setup (Meiantech,Visonic,FS20,RSL)
- Implemented: Latest RFXCOM SDK (#67)
- Changed: Wind Station LaCrosse WS2300 will not display 'gust' any more
- Fixed: Ampersand in name could cause domoticz to go in endless loop
- Fixed: CM119/160/180 Energy Usage values
- Implemented: Initial language translation
- Implemented: German language support (thanks to the community!)
- Fixed: Hardware Setup, the selected existing hardware could not match with the hardware type dropdown
- Fixed: Hardware Setup, Mode button for RFXCom back again
- Fixed: CM119/160/180 Energy daily values (for readers with a very high counter)
- Implemented: French language support (thanks to the community!)
- Fixed: Notification translations
- Implemented: Lighting2, when a Group Off is received, all switched with the same ID will be set to 'Off' (internally)
- Implemented: Z-Wave Temp/Humidity sensor